--- a/springboot-rpc/tutorial-client/pom.xml
+++ b/springboot-rpc/tutorial-client/pom.xml
@@ -39,24 +39,29 @@
         </dependency>
 
         <!-- GRPC interface services -->
-        <dependency>
-            <groupId>com.ema.springboot.grpc</groupId>
-            <artifactId>tutorial-facade</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.ema.springboot.grpc</groupId>-->
+<!--            <artifactId>tutorial-facade</artifactId>-->
+<!--            <version>0.0.1-SNAPSHOT</version>-->
+<!--        </dependency>-->
 
         <!-- RPC framework -->
-        <dependency>
-            <groupId>com.ema.springboot.grpc</groupId>
-            <artifactId>spring-boot-starter-grpc</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.ema.springboot.grpc</groupId>-->
+<!--            <artifactId>spring-boot-starter-grpc</artifactId>-->
+<!--            <version>0.0.1-SNAPSHOT</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
