--- a/springboot-rpc/tutorial-server/pom.xml
+++ b/springboot-rpc/tutorial-server/pom.xml
@@ -39,18 +39,18 @@
         </dependency>
 
         <!-- GRPC interface service -->
-        <dependency>
-            <groupId>com.ema.springboot.grpc</groupId>
-            <artifactId>tutorial-facade</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.ema.springboot.grpc</groupId>-->
+<!--            <artifactId>tutorial-facade</artifactId>-->
+<!--            <version>0.0.1-SNAPSHOT</version>-->
+<!--        </dependency>-->
 
         <!-- RPC Framework -->
-        <dependency>
-            <groupId>com.ema.springboot.grpc</groupId>
-            <artifactId>spring-boot-starter-grpc</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.ema.springboot.grpc</groupId>-->
+<!--            <artifactId>spring-boot-starter-grpc</artifactId>-->
+<!--            <version>0.0.1-SNAPSHOT</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
